--- a/app/src/main/res/layout/spinner_item_with_checkbox.xml
+++ b/app/src/main/res/layout/spinner_item_with_checkbox.xml
@@ -12,8 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.9"
-        android:text=""
-       />
+        android:text=""/>
+
     <CheckBox
         android:id="@+id/checkbox"
         android:layout_width="0dp"
