--- a/app/src/main/res/layout/acadamic_item.xml
+++ b/app/src/main/res/layout/acadamic_item.xml
@@ -9,7 +9,6 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="@dimen/_100dp"
         android:padding="@dimen/_5dp"
         app:cardCornerRadius="@dimen/_5dp"
         app:cardElevation="@dimen/_5dp"
@@ -25,8 +24,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_weight=".2"
-                android:src="@drawable/tropy1" />
+                android:layout_weight=".2" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -38,18 +36,18 @@
 
                 <TextView
                     android:id="@+id/name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="1 June 2018,04:09 PM"
+                    android:padding="@dimen/_3dp"
                     android:textSize="@dimen/_12dp"
                     android:textStyle="bold" />
 
 
                 <TextView
                     android:id="@+id/address"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="INDIA VS USA"
+                    android:padding="@dimen/_3dp"
                     android:textSize="@dimen/_12dp"
                     android:textStyle="bold" />
 
@@ -64,14 +62,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="TEST(3/4)"
                         android:textSize="@dimen/_12dp" />
 
                     <TextView
                         android:id="@+id/moreGamesTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="+ 16 More games.."
                         android:textColor="@color/orange"
                         android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
