--- a/app/src/main/res/layout/academics_fragments.xml
+++ b/app/src/main/res/layout/academics_fragments.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/_5dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -11,14 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_35dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_5dp"
-        android:layout_marginRight="@dimen/_8dp"
-        android:layout_marginBottom="@dimen/_5dp"
+        android:layout_margin="@dimen/_6dp"
         android:background="@drawable/edittextround"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:padding="@dimen/_2dp">
+        android:padding="@dimen/_5dp">
 
         <com.kredivation.aakhale.components.ASTEditText
             android:id="@+id/searchedit"
@@ -43,6 +40,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_4dp"
         android:orientation="horizontal">
 
         <com.kredivation.aakhale.components.ASTTextView
@@ -53,7 +51,7 @@
             android:padding="@dimen/_5dp"
             android:text="TOP ACADEMIES"
             android:textColor="@color/black"
-            android:textSize="@dimen/_14dp" />
+            android:textSize="@dimen/_12dp" />
 
 
         <LinearLayout
@@ -67,7 +65,7 @@
 
             <com.kredivation.aakhale.components.ASTFontTextIconView
                 android:id="@+id/sortBy"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
@@ -100,7 +98,7 @@
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <android.support.v7.widget.RecyclerView
