--- a/app/src/main/res/layout/chat_list_row.xml
+++ b/app/src/main/res/layout/chat_list_row.xml
@@ -4,6 +4,7 @@
     android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="@dimen/_5dp"
     app:cardCornerRadius="@dimen/_5dp"
     app:cardElevation="@dimen/_5dp"
     app:cardUseCompatPadding="true">
@@ -11,7 +12,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/_5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,13 +24,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_5dp"
-                android:layout_weight="0.3"
+                android:layout_weight="0.2"
                 android:orientation="horizontal">
 
                 <com.kredivation.aakhale.components.CircleImageView
                     android:id="@+id/userImage"
                     android:layout_width="@dimen/_60dp"
                     android:layout_height="@dimen/_60dp"
+                    android:layout_gravity="center"
                     android:src="@drawable/p4" />
 
             </LinearLayout>
@@ -36,7 +39,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_20dp"
+                android:layout_gravity="center"
                 android:layout_weight="0.7"
                 android:orientation="vertical">
 
@@ -44,7 +47,6 @@
                     android:id="@+id/userName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text=""
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/_14dp" />
 
