--- a/app/src/main/res/layout/coach_item_row.xml
+++ b/app/src/main/res/layout/coach_item_row.xml
@@ -25,6 +25,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_margin="@dimen/_4dp"
                 android:layout_weight=".2"
                 android:src="@drawable/tropy1" />
 
