--- a/app/src/main/res/layout/fragment_add_academics_vfragments.xml
+++ b/app/src/main/res/layout/fragment_add_academics_vfragments.xml
@@ -74,7 +74,8 @@
                     android:layout_marginLeft="@dimen/_5dp"
                     android:layout_marginRight="@dimen/_5dp"
                     android:background="@drawable/round_boder"
-                    android:padding="@dimen/_12dp"
+                    android:padding="@dimen/_5dp"
+                    android:minHeight="@dimen/_40dp"
                     android:textSize="@dimen/_12dp" />
 
                 <TextView
@@ -93,7 +94,8 @@
                     android:layout_marginLeft="@dimen/_5dp"
                     android:layout_marginRight="@dimen/_5dp"
                     android:background="@drawable/round_boder"
-                    android:padding="@dimen/_12dp"
+                    android:padding="@dimen/_5dp"
+                    android:minHeight="@dimen/_40dp"
                     android:textSize="@dimen/_12dp" />
 
 
@@ -178,7 +180,8 @@
                     android:layout_marginLeft="@dimen/_5dp"
                     android:layout_marginRight="@dimen/_5dp"
                     android:background="@drawable/round_boder"
-                    android:padding="@dimen/_12dp"
+                    android:padding="@dimen/_5dp"
+                    android:minHeight="@dimen/_40dp"
                     android:inputType="number"
                     android:textSize="@dimen/_12dp" />
 
