--- a/app/src/main/res/layout/fragment_add_tournament.xml
+++ b/app/src/main/res/layout/fragment_add_tournament.xml
@@ -31,7 +31,8 @@
                 android:layout_marginLeft="@dimen/_5dp"
                 android:layout_marginRight="@dimen/_5dp"
                 android:background="@drawable/round_boder"
-                android:padding="@dimen/_12dp"
+                android:minHeight="@dimen/_40dp"
+                android:padding="@dimen/_5dp"
                 android:textSize="@dimen/_12dp" />
 
 
@@ -51,7 +52,8 @@
                 android:layout_marginLeft="@dimen/_5dp"
                 android:layout_marginRight="@dimen/_5dp"
                 android:background="@drawable/round_boder"
-                android:padding="@dimen/_12dp"
+                android:minHeight="@dimen/_40dp"
+                android:padding="@dimen/_5dp"
                 android:textSize="@dimen/_12dp" />
 
 
@@ -72,7 +74,8 @@
                 android:layout_marginRight="@dimen/_5dp"
                 android:background="@drawable/round_boder"
                 android:inputType="number"
-                android:padding="@dimen/_12dp"
+                android:minHeight="@dimen/_40dp"
+                android:padding="@dimen/_5dp"
                 android:textSize="@dimen/_12dp" />
 
             <LinearLayout
@@ -85,6 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_3dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -231,7 +235,8 @@
                             android:layout_marginRight="@dimen/_5dp"
                             android:background="@drawable/round_boder"
                             android:inputType="number"
-                            android:padding="@dimen/_12dp"
+                            android:minHeight="@dimen/_40dp"
+                            android:padding="@dimen/_5dp"
                             android:textSize="@dimen/_12dp" />
 
 
@@ -413,10 +418,6 @@
                     </LinearLayout>
 
 
-
-
-
-
                 </LinearLayout>
 
             </LinearLayout>
@@ -484,7 +485,8 @@
                             android:layout_marginRight="@dimen/_5dp"
                             android:background="@drawable/round_boder"
                             android:inputType="number"
-                            android:padding="@dimen/_12dp"
+                            android:minHeight="@dimen/_40dp"
+                            android:padding="@dimen/_5dp"
                             android:textSize="@dimen/_12dp" />
 
 
