--- a/app/src/main/res/layout/fragment_coach_deatail.xml
+++ b/app/src/main/res/layout/fragment_coach_deatail.xml
@@ -46,7 +46,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/name"
+                            android:id="@+id/nametxt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="1 June 2018,04:09 PM"
@@ -232,7 +232,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/activityID"
+                                android:id="@+id/coachRole"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Head Coach"
@@ -264,110 +264,17 @@
                 android:orientation="vertical"
                 android:padding="@dimen/_5dp">
 
-
                 <LinearLayout
+                    android:id="@+id/coachInformation"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:orientation="horizontal">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Text Umpire "
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/testinformation"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="30(2013-2018)"
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/Ok"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_5dp"
-                        android:background="@drawable/round_boder_green"
-                        android:gravity="center"
-                        android:padding="@dimen/_5dp"
-                        android:text="Approved"
-                        android:textAllCaps="true"
-                        android:textColor="@color/white"
-                        android:textSize="16sp" />
-                </LinearLayout>
+                    android:orientation="vertical" />
 
 
             </android.support.v7.widget.CardView>
 
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
-                android:minHeight="@dimen/_90dp"
-                android:orientation="vertical"
-                android:padding="@dimen/_5dp">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Text Umpire "
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/testinformation2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="30(2013-2018)"
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/Ok2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_5dp"
-                        android:background="@drawable/border_layout_orange"
-                        android:gravity="center"
-                        android:padding="@dimen/_5dp"
-                        android:text="Pending"
-                        android:textAllCaps="true"
-                        android:textColor="@color/white"
-                        android:textSize="16sp" />
-                </LinearLayout>
-
-
-            </android.support.v7.widget.CardView>
         </LinearLayout>
     </ScrollView>
 
