--- a/app/src/main/res/layout/fragment_player_details.xml
+++ b/app/src/main/res/layout/fragment_player_details.xml
@@ -224,115 +224,45 @@
 
 
                 <LinearLayout
+                    android:id="@+id/teamInfoLayoutView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Text Umpire "
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/testinformation"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="30(2013-2018)"
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/status"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_5dp"
-                        android:gravity="center"
-                        android:padding="@dimen/_5dp"
-                        android:text="Approved"
-                        android:textAllCaps="true"
-                        android:textColor="@color/green"
-                        android:textSize="16sp" />
-                </LinearLayout>
+                    android:orientation="vertical"
+                    android:padding="@dimen/_5dp" />
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="horizontal"
-                    android:padding="@dimen/_5dp">
-
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Text Umpire "
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/testinformation2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="30(2013-2018)"
-                            android:textSize="@dimen/_12dp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/Ok2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_5dp"
-                        android:gravity="center"
-                        android:padding="@dimen/_5dp"
-                        android:text="Pending"
-                        android:textAllCaps="true"
-                        android:textColor="@color/red5"
-                        android:textSize="16sp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5dp"
                     android:orientation="vertical">
 
                     <com.kredivation.aakhale.components.ASTTextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_5dp"
+                        android:layout_marginTop="@dimen/_5dp"
                         android:padding="@dimen/_5dp"
                         android:text="Gallery"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14dp"
                         android:textStyle="bold" />
 
-
-                    <com.kredivation.aakhale.pagerlib.MetalRecyclerViewPager
-                        android:id="@+id/tgallaryIMageviewPager"
+                    <HorizontalScrollView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:itemMargin="@dimen/_70dp" />
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:id="@+id/galleryView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:orientation="horizontal"
+                            android:padding="@dimen/_5dp" />
+                    </HorizontalScrollView>
+
 
                 </LinearLayout>
 
