--- a/app/src/main/res/layout/fragment_teame.xml
+++ b/app/src/main/res/layout/fragment_teame.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
+    android:layout_margin="@dimen/_5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -11,11 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_35dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_5dp"
-        android:layout_marginRight="@dimen/_8dp"
-        android:layout_marginBottom="@dimen/_5dp"
         android:background="@drawable/edittextround"
+        android:layout_marginTop="@dimen/_5dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="@dimen/_2dp">
