--- a/app/src/main/res/layout/fragment_umpire_detail.xml
+++ b/app/src/main/res/layout/fragment_umpire_detail.xml
@@ -27,6 +27,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
+                    android:layout_margin="@dimen/_5dp"
                     android:layout_weight=".2"
                     android:src="@drawable/tropy1" />
 
@@ -49,6 +50,7 @@
                             android:id="@+id/name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:padding="@dimen/_5dp"
                             android:text="1 June 2018,04:09 PM"
                             android:textSize="@dimen/_14dp"
                             android:textStyle="bold" />
@@ -60,6 +62,7 @@
                             android:layout_height="wrap_content"
                             android:text="* * * * *"
                             android:textColor="@color/orange"
+                            android:padding="@dimen/_5dp"
                             android:textSize="@dimen/_20dp"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -69,6 +72,7 @@
                         android:id="@+id/fab"
                         android:layout_width="@dimen/_30dp"
                         android:layout_height="wrap_content"
+                        android:padding="@dimen/_5dp"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_favorite" />
 
@@ -232,7 +236,7 @@
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/activityID"
+                                android:id="@+id/Roletxt"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Cricket Umpire"
@@ -257,51 +261,14 @@
                 android:textStyle="bold" />
 
             <LinearLayout
+                android:id="@+id/umpireInfoLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_5dp"
                 android:orientation="vertical"
-                android:padding="@dimen/_5dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Text Umpire "
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/testinformation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="30(2013-2018)"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                android:padding="@dimen/_5dp" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/_5dp"
-                android:orientation="vertical"
-                android:padding="@dimen/_5dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Odis Umpire "
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/odiesInfo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="35(2013-2018)"
-                    android:textSize="@dimen/_12dp"
-                    android:textStyle="bold" />
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
