--- a/app/src/main/res/layout/image_item_layout.xml
+++ b/app/src/main/res/layout/image_item_layout.xml
@@ -1,9 +1,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="5dp"
+    android:layout_marginTop="@dimen/_5dp"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="@dimen/_5dp">
 
     <ImageView
         android:id="@+id/image"
