--- a/app/src/main/res/layout/match_row.xml
+++ b/app/src/main/res/layout/match_row.xml
@@ -20,12 +20,12 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="@dimen/_5dp">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.9"
                 android:orientation="vertical">
 
 
@@ -84,7 +84,8 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="horizontal">
+                                android:orientation="horizontal"
+                                android:padding="@dimen/_5dp">
 
                                 <TextView
                                     android:id="@+id/date"
