--- a/app/src/main/res/layout/playerlist_item_row.xml
+++ b/app/src/main/res/layout/playerlist_item_row.xml
@@ -3,19 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/_5dp">
-
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_5dp"
         android:padding="@dimen/_5dp"
         app:cardCornerRadius="@dimen/_5dp"
         app:cardElevation="@dimen/_5dp"
         app:cardUseCompatPadding="true">
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,35 +32,37 @@
                 android:padding="@dimen/_5dp">
 
                 <TextView
-                    android:id="@+id/tmeavsteam"
-                    android:layout_width="match_parent"
+                    android:id="@+id/nameTameInfo"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/_5dp"
-                    android:text="IND VS AUS "
-                    android:textSize="@dimen/_14dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/stadiumaddress"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/_3dp"
-                    android:text="Noida Cricket Stadium"
+                    android:text="Text Umpire "
                     android:textSize="@dimen/_12dp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/date"
-                    android:layout_width="match_parent"
+                    android:id="@+id/dateInfo"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="@dimen/_3dp"
-                    android:text="25 Aug 2018"
+                    android:padding="@dimen/_5dp"
+                    android:text="30(2013-2018)"
                     android:textSize="@dimen/_12dp"
                     android:textStyle="bold" />
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/_5dp"
+                android:gravity="center"
+                android:padding="@dimen/_5dp"
+                android:text="Approved"
+                android:textAllCaps="true"
+                android:textColor="@color/green"
+                android:textSize="16sp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
 
 </LinearLayout>
