--- a/app/src/main/res/layout/sports_name_row.xml
+++ b/app/src/main/res/layout/sports_name_row.xml
@@ -24,7 +24,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"
+                android:layout_weight="0.9"
                 android:orientation="vertical">
 
 
@@ -43,7 +43,7 @@
                             android:id="@+id/imageSports"
                             android:layout_width="@dimen/_50dp"
                             android:layout_height="@dimen/_50dp"
-                            android:padding="@dimen/_2dp"
+                            android:layout_margin="@dimen/_4dp"
                             android:src="@drawable/p4"
                             android:textSize="@dimen/_12dp"
                             android:textStyle="bold" />
@@ -65,7 +65,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="@dimen/_5dp"
-                android:layout_weight="0.3"
+                android:layout_weight="0.1"
                 android:gravity="center"
                 android:orientation="vertical">
 
