--- a/app/src/main/res/layout/teams_row.xml
+++ b/app/src/main/res/layout/teams_row.xml
@@ -44,7 +44,7 @@
 
                     <TextView
                         android:id="@+id/name"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Noida Teams"
                         android:textSize="@dimen/_14dp"
@@ -53,8 +53,9 @@
 
                     <TextView
                         android:id="@+id/teamaddress"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:padding="@dimen/_2dp"
                         android:text="UP"
                         android:textSize="@dimen/_12dp"
                         android:textStyle="bold" />
