--- a/app/src/main/res/layout/umpire_row.xml
+++ b/app/src/main/res/layout/umpire_row.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:id="@+id/MainLayout"
+    android:padding="@dimen/_5dp"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/_4dp">
 
