--- a/app/src/main/res/layout/upcoming_match_item.xml
+++ b/app/src/main/res/layout/upcoming_match_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
+    android:padding="@dimen/_5dp"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -16,6 +17,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/_5dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -24,6 +26,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight=".2"
+                android:layout_margin="@dimen/_5dp"
                 android:src="@drawable/tropy1" />
 
             <LinearLayout
